# py8rds

./: .gitignore  README.md  __init__.py  pyproject.toml
py8rds/: __init__.py
rdd/: __init__.py
tests/: __init__.py  create_test_data.R  tutorial.ipynb
tutorials/: alternatives.ipynb  tutorial.ipynb
