[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rdd"
authors = [{ name="Pasha Mazin", email="pavel.mazin@sanger.ac.uk" }]
description = "R Data Deserialization in python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
Homepage = "https://github.com/cellgeni/rdd-py"
Issues = "https://github.com/cellgeni/rdd-py/issues"

[tool.black]
line-length = 120