[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py8rds"
authors = [{ name="Pasha Mazin", email="pm19@sanger.ac.uk" },
           { name = "Martin Prete", email = "mp33@sanger.ac.uk" }]
description = "R Data Deserialization in python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "pandas",
    "anndata",
    "scipy",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/cellgeni/py8rds"
Issues = "https://github.com/cellgeni/py8rds/issues"

[tool.black]
line-length = 120
